build updates and errorprone clean-up